--- a/css/footer.scss
+++ b/css/footer.scss
@@ -14,7 +14,7 @@ footer {
         margin-left: 165px;
     }
 
-    .list {
+    ul {
         display: grid;
         grid-template-columns: auto auto auto;
         justify-items: start;
@@ -22,19 +22,25 @@ footer {
         margin-left: -135px;
         row-gap: 12px;
 
-        .list-item {
-            color: $titles;
-            font-size: 18px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: 30px;
-            letter-spacing: 0.135px;
+        li {
+            list-style: none;
+            margin: 0px;
             width: 160px;
             text-align: left;
-            text-decoration: none;
 
-            &:hover {
-                color: #5dccbb;
+            a {
+                color: $titles;
+                font-size: 18px;
+                font-style: normal;
+                font-weight: 400;
+                line-height: 30px;
+                letter-spacing: 0.135px;
+                text-align: left;
+                text-decoration: none;
+
+                &:hover {
+                    color: #5dccbb;
+                }
             }
         }
     }
@@ -73,18 +79,17 @@ footer {
             margin-bottom: 40px;
         }
 
-        .list {
+        ul {
             display: flex;
             flex-direction: column;
             margin: 0px auto;
             gap: 20px;
 
-            .list-item {
+            a {
                 text-align: center;
             }
         }
-
-        .social_brands {
+        s .social_brands {
             margin: 0px auto;
             margin-top: 48px;
         }
